--- a/package.json
+++ b/package.json
@@ -47,6 +47,12 @@
   "jest": {
     "transformIgnorePatterns": [
         "node_modules\/(?!axios)"
-    ]
+    ],
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest"
+    },
+    "testEnvironment": "jsdom",
+    "setupFilesAfterEnv": ["<rootDir>/src/setupTests.js"]
+    
   }
 }
