--- a/package.json
+++ b/package.json
@@ -45,14 +45,9 @@
     "babel-jest": "^29.7.0"
   },
   "jest": {
-    "transformIgnorePatterns": [
-        "node_modules\/(?!axios)"
-    ],
     "transform": {
       "^.+\\.(js|jsx)$": "babel-jest"
     },
-    "testEnvironment": "jsdom",
-    "setupFilesAfterEnv": ["<rootDir>/src/setupTests.js"]
-    
+    "testEnvironment": "jsdom"
   }
 }
